feat: add validation class

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     "node": true
   },
   "rules": {
-    "global-require": 0
+    "global-require": 0,
+    "no-underscore-dangle": 0,
+    "max-len": 0
   }
 }
