--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/PonikarovaV/news-explorer-frontend#readme",
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.2",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
@@ -47,6 +48,7 @@
     "autoprefixer": "^9.8.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "validator": "^13.1.1"
   }
 }
